src/App.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');

body {
  box-sizing: border-box;
  font-family: 'Open Sans', sans-serif;
}
/* Utility Classes */

.paid-bill {
  text-decoration: line-through;
}

.icon {
  cursor: pointer;
  user-select: none;
}

/* General Styles */

.App-header {
  background-color: white;
  padding: 20px;
  color: #616161;
  text-align: center;
}

.App-title {
  font-size: 1.5em;
}

#container {
  margin: 0 auto;
  max-width: 900px;
  min-width: 320px;
  width: 90%;
  margin: 0 auto;
}

/* Bill styles */

#bills-container {
  padding: 15px;
}

.bill-item {
  display: grid;
  grid-template-columns: 24px 3fr 1fr 1fr;
  padding: 5px;
  line-height: 1em;
}

.bill-item p {
  display: inline-block;
  padding: 5px;
}

.completed-input {
  visibility: hidden;
}

#button-add-bill {
  display: block;
  cursor: pointer;
  padding: 10px 20px;
  background-color: white;
  border: 1px solid #3F88C5;
  color: #3F88C5;
  font-size: 1.2em;
  margin: 20px auto;
  transition: all 0.2s ease-in-out;
}

#button-add-bill:hover {
  background-color: #3F88C5;
  color: white;
}

